--- a/trunk/ResumeWebSite/Resume/assets/css/print.css
+++ b/trunk/ResumeWebSite/Resume/assets/css/print.css
@@ -1,10 +1,3 @@
-/*
-Template:	Clear Resume (Responsive)
-Creator:	Sabaina Bukhari (sabainabukhari@gmail.com)
-Website:	http://www.egreenwebservices.com
-Date:		09/27/2012
-*/
-
 body {	padding-top: 20px; padding-bottom: 40px; font: 14px arial, sans-serif; }
 
 h1, h2, h3{	font-family: arial, sans-serif; font-weight:normal; line-height:normal; 
@@ -13,6 +6,7 @@ h1, h2, h3{	font-family: arial, sans-serif; font-weight:normal; line-height:norm
 h1{ font-size:52px; }
 h2{ font-size:24px; }
 h3{ font-size:18px; }
+h4{ font-size:30px; }
 
 hr{ height: 0; border-style: dotted; border-width: 1px 0 0 0; border-color:#999; }
 
