--- a/trunk/ResumeWebSite/Resume/assets/css/style.css
+++ b/trunk/ResumeWebSite/Resume/assets/css/style.css
@@ -1,21 +1,15 @@
-/*
-Template:	Clear Resume (Responsive)
-Creator:	Sabaina Bukhari (sabainabukhari@gmail.com)
-Website:	http://www.egreenwebservices.com
-Date:		09/27/2012
-*/
-
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,800|Archivo+Narrow);
 
 body {	padding-top: 20px; padding-bottom: 40px; font: 14px/1.7em 'Open Sans', arial, sans-serif; 
 		background: #DDD url(../img/bg.png) repeat 0 0; }
 
-h1, h2, h3{	font-family: 'Archivo Narrow', sans-serif; font-weight:normal; line-height:normal; 
+h1, h2, h3,h4{	font-family: 'Archivo Narrow', sans-serif; font-weight:normal; line-height:normal; 
 			padding:0; margin:0; margin-bottom:5px;	}
 
 h1{ font-size:52px; text-shadow:2px 2px #eee; }
 h2{ font-size:24px; }
 h3{ font-size:18px; }
+h4{ font-size:30px; text-shadow:2px 2px #eee; }
 
 hr{ height: 0; border-style: dotted; border-width: 1px 0 0 0; border-color:#999; }
 
@@ -49,3 +43,4 @@ h2 span { color: #F60; }
 .text-info{ color:#F60; padding-left:10px; }
 .label-info{ color:#F60; background-color: #fff; text-shadow:none; font: 14px/1.7em 'Open Sans', arial, sans-serif;
 			padding:0; font-weight:normal; }
+.footright{float: right;}
