--- a/trunk/ResumeWebSite/Resume/assets/css/style.css
+++ b/trunk/ResumeWebSite/Resume/assets/css/style.css
@@ -40,7 +40,9 @@ ul.unstyled{ margin-left: 20px; list-style: none; }
 /** customizable through cp. **/
 h2 span { color: #F60; }
 .span2 h3{ color:#F60; }
+.span10 h3{ color:#F60; }
 .text-info{ color:#F60; padding-left:10px; }
 .label-info{ color:#F60; background-color: #fff; text-shadow:none; font: 14px/1.7em 'Open Sans', arial, sans-serif;
 			padding:0; font-weight:normal; }
 .footright{float: right;}
+.float-right{text-align: right;}
